Use lazy loading for pictogram results

--- a/templates/pictograms.html
+++ b/templates/pictograms.html
@@ -24,4 +24,5 @@
 {% block footer %}
   {{ super() }}
   <script src="{{ url_for('static', filename='pictograms.js') }}"></script>
+  <script src="{{ url_for('static', filename='vendor/jquery.lazyload.js') }}"></script>
 {% endblock %}}
