--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,8 @@
   {% block head %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>{{ project_name }}{% if active_page %} | {{ active_page }}{% endif %}</title>
+    <title>{{ project_name }}{% if active_page %} | {{ active_page }}{% endif %}{% if subpage %} :
+      {{ subpage }}{% endif %}</title>
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='vendor/bootstrap.min.css') }}">
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.15/css/dataTables.bootstrap4.min.css">
@@ -27,9 +28,21 @@
       <div class="collapse navbar-collapse" id="navbar-links">
         <ul class="navbar-nav mr-auto">
           {% for page, url in navigation %}
-            <li class="nav-item {% if active_page == page %}active{% endif %}">
-              <a class="nav-link" href="{{ url }}">{{ page }}</a>
-            </li>
+            {% if url is not string %}{# if it's a tuple, use a dropdown #}
+              <li class="nav-item dropdown{% if active_page == page %} active{% endif %}">
+                <a class="nav-link dropdown-toggle" href="#" id="{{ page|lower }}-dropdown" data-toggle="dropdown"
+                   aria-haspopup="true" aria-expanded="false">{{ page }}</a>
+                <div class="dropdown-menu" aria-labelledby="{{ page|lower }}">
+                  {% for subpage, suburl in url %}
+                    <a class="dropdown-item" href="{{ suburl }}">{{ subpage }}</a>
+                  {% endfor %}
+                </div>
+              </li>
+            {% else %}
+              <li class="nav-item{% if active_page == page %} active{% endif %}">
+                <a class="nav-link" href="{{ url }}">{{ page }}</a>
+              </li>
+            {% endif %}
           {% endfor %}
         </ul>
       </div>
