--- a/templates/page.html
+++ b/templates/page.html
@@ -3,7 +3,7 @@
 
 {% block main %}
   <section class="container">
-    <h1 id="page-title">{{ active_page }}</h1>
+    <h1 id="page-title">{{ active_page }}{% if subpage %}: {{ subpage }}{% endif %}</h1>
     {% block content %}{% endblock %}
   </section>
 {% endblock %}
