--- a/templates/sounds.html
+++ b/templates/sounds.html
@@ -1,9 +1,10 @@
 {% extends "page.html" %}
-{% set active_page = "Search by Sounds" %}
+{% set active_page = "Wordlists" %}
+{% set subpage = "By Sounds" %}
 {% from "consonant-select.html" import consonant_select with context %}
 
 {% block content %}
-<p class="lead">Find words based on chosen target sounds</p>
+<p class="lead">Create a wordlist based on chosen target sounds</p>
 
   <form class="form-inline" action="{{ url_for('sound_search') }}" method="get">
     <label class="form-control-label" for="target1">Target 1:</label>
