--- a/artictools/templates/general/grid-builder.html
+++ b/artictools/templates/general/grid-builder.html
@@ -42,7 +42,7 @@
           </button>
         </div>
         <div class="modal-body">
-          <form action="{{ url_for('pictogram_search') }}" method="get" class="form">
+          <form action="{{ url_for('pictograms.search') }}" method="get" class="form">
             <label for="image-search-query" class="sr-only">Query:</label>
             <input id="image-search-query" name="query" class="form-control" placeholder="Enter search keywords..." autofocus>
           </form>
