--- a/artictools/templates/wordlists/minimal-pairs.html
+++ b/artictools/templates/wordlists/minimal-pairs.html
@@ -6,7 +6,7 @@
 {% block content %}
   <p class="lead">Create a wordlist based on minimal pairs</p>
 
-  <form class="form-inline" action="{{ url_for('minimal_pair_search') }}" method="get">
+  <form class="form-inline" action="{{ url_for('wordlists.minimal_pair_search') }}" method="get">
     <label class="form-control-label" for="target1">Target 1:</label>
     {{ consonant_select("target1") }}
 
