--- a/artictools/templates/wordlists/sounds.html
+++ b/artictools/templates/wordlists/sounds.html
@@ -6,7 +6,7 @@
 {% block content %}
 <p class="lead">Create a wordlist based on chosen target sounds</p>
 
-  <form class="form-inline" action="{{ url_for('sound_search') }}" method="get">
+  <form class="form-inline" action="{{ url_for('wordlists.sound_search') }}" method="get">
     <label class="form-control-label" for="target1">Target 1:</label>
     {{ consonant_select("target") }}
 
