Link to s3 resources directly

--- a/artictools/templates/general/grid-builder.html
+++ b/artictools/templates/general/grid-builder.html
@@ -18,6 +18,7 @@
     </select>
     <button id="print" class="btn btn-primary mr-2"><i class="fa fa-print" aria-hidden="true"></i> Print</button>
     <input type="hidden" id="minimum-query-length" value="{{ config["MINIMUM_PICTOGRAM_QUERY_LENGTH"] }}">
+    <input type="hidden" id="s3-pictogram-url" value="{{ config["S3_PICTOGRAM_URL"] }}">
   </form>
   <hr class="hidden-print">
 
