Add support for medial sound search

--- a/artictools/templates/wordlists/sounds.html
+++ b/artictools/templates/wordlists/sounds.html
@@ -19,6 +19,7 @@
     <label class="form-control-label" for="position">Position:</label>
     <select class="form-control mx-2" id="position" name="position">
       <option value="initial">Initial</option>
+      <option value="medial">Medial</option>
       <option value="final">Final</option>
     </select>
     <button class="btn btn-primary" type="submit">Search</button>
