Add form markup for syllable count search

--- a/artictools/templates/wordlists/minimal-pairs.html
+++ b/artictools/templates/wordlists/minimal-pairs.html
@@ -188,5 +188,5 @@
 
 {% block footer %}
   {{ super() }}
-  <script src="{{ url_for('static', filename='minimal-pairs.js') }}"></script>
+  <script src="{{ url_for('static', filename='basic-search.js') }}"></script>
 {% endblock %}
