--- a/artictools/templates/wordlists/sounds.html
+++ b/artictools/templates/wordlists/sounds.html
@@ -1,7 +1,7 @@
 {% extends "page.html" %}
 {% set active_page = "Wordlists" %}
 {% set subpage = "By Sounds" %}
-{% from "consonant-select.html" import consonant_select with context %}
+{% from "macros.html" import consonant_select with context %}
 
 {% block content %}
   <p class="lead">Create a wordlist based on chosen target sounds</p>
