Display frequency data for single word search

--- a/artictools/templates/wordlists/sounds.html
+++ b/artictools/templates/wordlists/sounds.html
@@ -26,10 +26,11 @@
   </form>
   <hr>
 
-  <table id="results" class="table">
+  <table id="results" class="table" data-order="[[1, &quot;desc&quot;]]">
     <thead>
     <tr>
-      <th>Word</th>
+      <th data-data="word">Word</th>
+      <th data-data="frequency" data-searchable="false">Frequency</th>
     </tr>
     </thead>
     <tbody></tbody>
