Link to newer wordlist types

--- a/artictools/templates/general/index.html
+++ b/artictools/templates/general/index.html
@@ -22,8 +22,9 @@
       <section class="col-md-4">
         <h2><i class="fa fa-list" aria-hidden="true"></i> Generate Wordlists</h2>
 
-        <p>Generate target word lists based on <a href="{{ url_for("wordlists.minimal_pairs") }}">minimal pairs</a> for
-          your target sounds.</p>
+        <p>Generate word lists for therapy based on <a href="{{ url_for("wordlists.syllables") }}">syllable
+          count</a>, <a href="{{ url_for("wordlists.sounds") }}">target sounds</a>, or
+          <a href="{{ url_for("wordlists.minimal_pairs") }}">minimal pairs.</a></p>
       </section>
 
       <section class="col-md-4">
