--- a/artictools/templates/macros.html
+++ b/artictools/templates/macros.html
@@ -4,7 +4,7 @@
       <option value="">--</option>
     {% endif %}
     {% if kwargs["allow_wildcard"] %}
-      <option value="*">* (wildcard)</option>
+      <option value="*">(any consonant)</option>
     {% endif %}
     {% for consonant in CONSONANTS %}
       <option value="{{ consonant }}"
