Temp add G Suite verification

--- a/artictools/templates/base.html
+++ b/artictools/templates/base.html
@@ -4,6 +4,7 @@
   {% block head %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="google-site-verification" content="qCSbbZKfX6hUbaad_v--hmIO8MvwW6G88i2HyVzJz_c">
     <title>{{ project_name }}{% if active_page %} | {{ active_page }}{% endif %}{% if subpage %}:
       {{ subpage }}{% endif %}</title>
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
